# minivault

./: .gitignore  README.md  pyproject.toml  requirements.txt
minivault/: cli.py  logger.py  main.py
